# gba-toolchain

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.md  README.md  angle_lut.hpp  arm-gba-toolchain.cmake  dependencies.ini  fixed.hpp  launch.vs.json  lut_generator.hpp  main.cpp  render.iwram.cpp  tasks.vs.json  test.hpp  test.iwram.cpp  urls.txt
cmake/: Asset.cmake  Concat.cmake  ExecuteUnitTest.cmake  ExtLibraries.cmake  Gba.cmake  GbaFix.cmake  GbaFixCMakeLists.cmake  GbfsCMakeLists.cmake  IHex.cmake  Ini.cmake  LibsevenCMakeLists.cmake  MaxmodCMakeLists.cmake  MinrtCMakeLists.cmake  MmutilCMakeLists.cmake  NedcmakeCMakeLists.cmake  PosprintfCMakeLists.cmake  SuperFamiconv.cmake  Test.cmake  ToncCMakeLists.cmake  Toolchain.cmake  agb.toolchain.cmake  gba.toolchain.cmake
cmake-include/: Detail.cmake  DownloadCompile.cmake  DownloadDependencies.cmake  DownloadExtract.cmake  FindCompilers.cmake  GBAExternalProject.cmake  GBATarget.cmake  GbaFixCMakeLists.cmake  GbfsCMakeLists.cmake  KeyValue.cmake  MaxmodCMakeLists.cmake  NedclibCMakeLists.cmake  PosprintfCMakeLists.cmake  ToncCMakeLists.cmake
cmake/Modules/: Bin2o.cmake  Bin2s.cmake  Bincat.cmake  CommonDir.cmake  Depfile.cmake  FileRename.cmake  FileSplit.cmake  FindAgbabi.cmake  FindFreeImage.cmake  FindGba-Hpp.cmake  FindGbfs.cmake  FindGrit.cmake  FindLibgba.cmake  FindLibmultiboot.cmake  FindLibrom.cmake  FindLibseven.cmake  FindMaxmod.cmake  FindPosprintf.cmake  FindSuperFamiconv.cmake  FindTonclib.cmake  Findagbabi.cmake  Findbutano.cmake  Findgba-hpp.cmake  Findgbfs.cmake  Findgbt-player.cmake  Findgrit.cmake  Findlibgba.cmake  Findlibmultiboot.cmake  Findlibrom.cmake  Findlibsavgba.cmake  Findlibseven.cmake  Findmaxmod.cmake  Findposprintf.cmake  Findsdk-seven.cmake  Findsuperfamiconv.cmake  Findtonclib.cmake  Findugba.cmake  Findxilefianlib.cmake  GbaFix.cmake  Hexdecode.cmake  (+2 more)
cmake/Platform/: AdvancedGameBoy-Clang-C.cmake  AdvancedGameBoy-Clang-CXX.cmake  AdvancedGameBoy-GNU-C.cmake  AdvancedGameBoy-GNU-CXX.cmake  AdvancedGameBoy.cmake
examples/: CMakeLists.txt  CMakePresets.json
examples/00-Template/: CMakeLists.txt  main.c
examples/01-ASM/: CMakeLists.txt  main.s
examples/02-C/: CMakeLists.txt  main.c
examples/03-C++/: CMakeLists.txt  main.cpp
examples/04-Tonc/: CMakeLists.txt  main.c
examples/05-Libgba/: CMakeLists.txt  main.c
examples/06-gba-hpp/: CMakeLists.txt  main.cpp
examples/07-sdk-seven/: CMakeLists.txt  main.c
examples/08-MaxMod/: CMakeLists.txt  main.c
examples/09-GBT-Player/: CMakeLists.txt  main.c
examples/10-GBFS/: CMakeLists.txt  main.c
examples/11-posprintf/: CMakeLists.txt  main.c
examples/12-Superfamiconv/: CMakeLists.txt
examples/13-Multiboot/: CMakeLists.txt  client.c  host.c
examples/14-Butano/: CMakeLists.txt
examples/14-Butano/src/: main.cpp
examples/15-libsavgba/: CMakeLists.txt  main.c
examples/16-ugba/: CMakeLists.txt  main.c
lib/: gba-header.s  gba-nano.specs  gba-nosyscalls.c  gba-runtime-devkitarm.specs  gba-runtime-fini_array.c  gba-runtime-init_array.c  gba-runtime-nano.specs  gba-runtime-nosyscalls.c  gba-sbrk.c
lib/agbabi/: CMakeLists.txt
lib/agbabi/include/sys/: ucontext.h
lib/agbabi/source/: getcontext.s  idiv.s  irq.s  makecontext.c  memcpy.s  memset.s  setcontext.s  swapcontext.s  uidiv.s
lib/comm/: .gitignore  CMakeLists.txt  comm.c  comm_multiboot.c
lib/comm/include/: comm.h
lib/ereader/: CMakeLists.txt  crt0.s  gba-syscalls.c  gba.ld
lib/flashcart/: .gitignore  CMakeLists.txt  crt0.s  disk_eeprom.s  disk_everdrive.c  disk_everdrive.s  disk_ezflash.c  disk_ezflash.s  disk_ezflash_iv.c  disk_ezflash_omega.c  disk_flash.c  disk_flash.s  disk_sram.s  diskio.c  diskio.h  everdrive.c  everdrive.h  ezflash.c  flashcart_ffconf.h  gba-dirent.c  gba-syscalls.c  gba-time.c  gba.ld
lib/flashcart/include/sys/: dirent.h
lib/gba-plusplus - Copy/: LICENSE  README.md  gbaplusplus.dox
lib/iosupport/: CMakeLists.txt
lib/iosupport/include/sys/: iosupport.h
lib/iosupport/source/sys/: iosupport.c
lib/ldscripts/: ereader.ld  multiboot.ld  rom.ld
lib/multiboot/: CMakeLists.txt  crt0.s  gba-irq.s  gba-syscalls.c  gba.ld  multiboot.header.s  multiboot.ld  syscalls.c
lib/rom/: CMakeLists.txt  crt0.s  gba-irq.s  gba-syscalls.c  gba.ld  rom.header.s  rom.ld  syscalls.c
lib/rtc/: CMakeLists.txt  rtc.c
lib/rtc/include/: rtc.h
lib/syscalls/: CMakeLists.txt
lib/syscalls/stub/: syscalls.c
sample_project/: CMakeLists.txt  CMakeSettings.json  ProjectSettings.json  launch.vs.json
sample_project/source/: main.cpp  toolbox.hpp
samples/01 My first GBA demo/: CMakeLists.txt  first.c
samples/02 libseven/: CMakeLists.txt  main.c
samples/03 tonclib/: CMakeLists.txt
samples/04 ereader/: CMakeLists.txt
samples/05 GBFS/: CMakeLists.txt  hello.txt  main.c
samples/06 Overlays/: CMakeLists.txt  main.c
samples/07 Assembly/: CMakeLists.txt  main.s
samples/08 Maxmod/: CMakeLists.txt  main.c
samples/09 RTC/: CMakeLists.txt
samples/1 My first GBA demo/: CMakeLists.txt
samples/10 Coroutine/: CMakeLists.txt  main.c
samples/11 Linker script/: CMakeLists.txt  crt0.s  gba-exceptions.specs  gba-rom.ld  main.cpp  sbrk.c  syscalls.c
samples/12 Raycaster/: CMakeLists.txt  asset_manager.hpp  camera.cpp  camera.hpp  fixed.hpp  main.cpp  raycast_engine.iwram.cpp  renderer.iwram.cpp
samples/12 agbabi/: CMakeLists.txt  main.c
samples/13 gba-hpp/: CMakeLists.txt  main.cpp
samples/14 Sections/: CMakeLists.txt  draw.h  draw.iwram.c  main.ewram.c
samples/2 libseven/: CMakeLists.txt
samples/2 mGBA Unit Test/: CMakeLists.txt  main.c
samples/3 libseven/: CMakeLists.txt  main.c
samples/3 tonclib/: CMakeLists.txt  main.c
samples/4 ereader/: CMakeLists.txt
samples/5 GBFS/: CMakeLists.txt
samples/5 ereader/: CMakeLists.txt  main.c
samples/6 GBFS/: main.c
samples/6 Overlays/: CMakeLists.txt
samples/7 Assembly/: CMakeLists.txt
samples/7 Overlays/: CMakeLists.txt  main.c
samples/8 Multiboot/: CMakeLists.txt  client.c  host.c
samples/9 RTC/: CMakeLists.txt  (+1 more)
source/: main.cpp  main.iwram.cpp
(+94 files in other folders)
